# platform-agnostic-skills-portable

./: .gitattributes  .gitignore  2026-05-20-BUILD-NOTES.md  2026-05-25-PHASE-3-RECON-NOTES.md  2026-05-27-GAP-TRACKER.md  2026-05-27-PHASE-4B-PLAN.md  2026-05-27-PHASE-4B-STARTER-PROMPT.md  2026-06-02-NEXT-SESSION-PROMPT.md  2026-06-05-gnucash-import-skill-prompt.md  2026-06-08-PENDING-MANUAL-STEPS.md  2026-06-09-GNUCASH-AUTOMATION-PROJECT-PLAN.md  2026-06-09-MP-03-DEPENDENCY-HASHING-PLAN.md  2026-06-09-PROJECT-regen-lock-uv-fallback.md  2026-06-14-PHASE4-DEDUP-PROMPT.md  2026-06-15-phase4-validation.py  2026-06-15-phase4lite-test.py  2026-06-17-override-system-test.py  BUILDING.md  CHANGELOG.md  HDFC_BUILD_PLAN.md  LICENSE  NOTICE  PHASE3_USAGE_GUIDE.md  README.md  RunApp.bat  commit_4c_skills.bat  pyproject.toml  requirements-lock.txt  requirements.txt  test_4c_e2e.bat  ui_port.json
.github/: dependabot.yml
bundling/: binaries.toml  build.py  generate_icons.py  paskills.spec  refresh_binaries.py  rthook_agents.py  sources.toml
docs/: 2026-07-20-itr-onpage-totals-plan.md  Parser-Generator-Guide.md  README.md  USER-GUIDE.html
outputs/: 2026-05-28-125212-Harhsal Form No 26AS-26AS.xlsx  2026-05-28-132422-pa-skills-bob-uploads-vwrcbysz-BoB.csv
packaging/: binaries.toml  build.py  paskills.spec  sources.toml
scripts/: build_fmv_csv.py  gen_docs.py  regen_lock.py
src/: test_4c_e2e_runner.py
tests/: test_26as.py  test_26as_journal.py  test_account_number_matching.py  test_api_key_encryption.py  test_bank_common.py  test_bank_common_consolidate.py  test_bank_contract.py  test_bank_gating.py  test_bank_skills.py  test_banks_registry.py  test_canonical_io.py  test_cc_transactions_main.py  test_config.py  test_contra_detection.py  test_contra_review.py  test_csv_analyzer_security.py  test_dispatcher_security.py  test_filedialog.py  test_gnucash_accounts.py  test_gnucash_pipeline_normalise.py  test_gnucash_review.py  test_hdfc.py  test_health.py  test_help_coverage.py  test_history_tab.py  test_icici.py  test_import_ready_standardization.py  test_input_caps.py  test_itr_mapping_review.py  test_krc_gnucash_review.py  test_krc_recon.py  test_msg_parser.py  test_native_resolve.py  test_optional_file_input.py  test_parser_generator.py  test_password_input.py  test_phase4c_skills.py  test_phase4d_streaming.py  (+10 more)
ui/: _config.py  (+12 more)
(+601 files in other folders)
